Date	Added
12/14
        * Added nullpo_retb to nullpo.c - does a break; if null [celest]
        * Replaced some parts in skill.c with nullpo checks [celest]
        * Corrected some typos - penaly -> penalty [celest]
        * Skill Updates [celest]
          - Most of 12/14's Sakray patch
	* The SKILL_MAX_DB (yes, a different #define from the one below)
	  was not large enough for current skills causing memory 
	  corruptions and crashes [MouseJstr]
	* Fixed how socket handles EAGIN errors (retry instead of
	  disconnecting) [MouseJstr]

12/13
        * Skill Updates [celest]
          - Added the new 'Throw Tomahawk' skill (Requires Sakexe1129 or newer) 
          - Added some new monster skills - but still not complete.
          - Adjusted Palm Strike, Tiger Fist and Chain Crush based on 12/14's patch
        * Removed redundant 'sg_count' for map_session_data and mob_data [celest]
        * Save both persons' data after trading in case a crash causes them to
          rollback -  fix by Freya [celest]
        * Removed 'type' paramater from pc_unequipitem to use 'flag' instead[celest]
        * Moved unequip checking code from clif.c to pc.c [celest]
	* Replaced many printf's in map-server with _ShowMessage(). [MC Cameri]
	* Skill timers for skills with id's higher then 450 were
	  corrupting memory [MouseJstr]
	* Increased max skills to 650 from 450 fixing MANY crashes [MouseJstr]
	* Creating Guild events were reading beyond supplied guild names ,
	  causing crashes [MouseJstr]
	* trades were derefing -2 into the inventory table sometimes [MouseJstr]
	* Not having a arrow in your inventory but having a bow
	  could cause it to set sd->status.inventory[-1].equip=32768
	  resulting in a memory corruption [MouseJstr]
	* local broadcasts of messages larger then 64 bytes were
	  corrupting the stack, causing crashes [MouseJstr]
	* mob eventnames were reading beyond source point, risking
	  going over page boundries, causing crashes [MouseJstr]